Move o.e.debug.tests to Java 21
Needed by
https://github.com/eclipse-platform/eclipse.platform.releng.aggregator/issues/2739

Fixed deprecated usage of Thread.getId.